--- a/.github/workflows/continue-review.yaml
+++ b/.github/workflows/continue-review.yaml
@@ -13,6 +13,7 @@ jobs:
   code-review:
     name: AI Code Review
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
       - name: Checkout Repository
