--- a/extensions/intellij/src/main/resources/META-INF/plugin.xml
+++ b/extensions/intellij/src/main/resources/META-INF/plugin.xml
@@ -25,6 +25,13 @@
 
         <projectService serviceInterface="com.github.continuedev.continueintellijextension.autocomplete.CompletionService"
                         serviceImplementation="com.github.continuedev.continueintellijextension.autocomplete.ContinueCompletionService"/>
+        <projectService
+                serviceInterface="com.github.continuedev.continueintellijextension.nextEdit.NextEditService"
+                serviceImplementation="com.github.continuedev.continueintellijextension.nextEdit.ContinueNextEditService"/>
+
+        <projectService
+                serviceImplementation="com.github.continuedev.continueintellijextension.nextEdit.NextEditWindowManager"/>
+
         <inline.completion.provider id="Continue" implementation="com.github.continuedev.continueintellijextension.autocomplete.ContinueInlineCompletionProvider"/>
 
         <notificationGroup id="Continue"
