--- a/.github/workflows/continue-general-review.yaml
+++ b/.github/workflows/continue-general-review.yaml
@@ -1,4 +1,4 @@
-name: Continue CLI Code Review
+name: Continue General Review
 
 on:
   pull_request:
@@ -18,7 +18,7 @@ jobs:
     timeout-minutes: 10
     # Only run if:
     # - It's a PR event from a team member (with write/admin permissions)
-    # - OR it's a comment with @continue-review on a PR from a team member
+    # - OR it's a comment with @continue-general-review on a PR from a team member
     if: |
       (github.event_name == 'pull_request' && 
        (github.event.pull_request.author_association == 'OWNER' || 
@@ -26,7 +26,7 @@ jobs:
         github.event.pull_request.author_association == 'COLLABORATOR')) ||
       (github.event_name == 'issue_comment' && 
        github.event.issue.pull_request && 
-       contains(github.event.comment.body, '@continue-review') &&
+       contains(github.event.comment.body, '@continue-general-review') &&
        (github.event.comment.author_association == 'OWNER' || 
         github.event.comment.author_association == 'MEMBER' || 
         github.event.comment.author_association == 'COLLABORATOR'))
