feat: add jump manager service to xml

--- a/extensions/intellij/src/main/resources/META-INF/plugin.xml
+++ b/extensions/intellij/src/main/resources/META-INF/plugin.xml
@@ -32,6 +32,9 @@
         <projectService
                 serviceImplementation="com.github.continuedev.continueintellijextension.nextEdit.NextEditWindowManager"/>
 
+        <projectService
+                serviceImplementation="com.github.continuedev.continueintellijextension.nextEdit.NextEditJumpManager"/>
+
         <inline.completion.provider id="Continue" implementation="com.github.continuedev.continueintellijextension.autocomplete.ContinueInlineCompletionProvider"/>
 
         <notificationGroup id="Continue"
