--- a/pr-review-action/action.yml
+++ b/pr-review-action/action.yml
@@ -32,7 +32,7 @@ runs:
           fi
         elif [ "${{ github.event_name }}" = "issue_comment" ]; then
           # Check if it's a PR comment with the trigger phrase
-          if [ "${{ github.event.issue.pull_request }}" != "" ] && [[ "${{ github.event.comment.body }}" == *"@continue-review"* ]]; then
+          if [ "${{ github.event.issue.pull_request }}" != "" ] && [[ "${{ github.event.comment.body }}" == *"@continue-general-review"* ]]; then
             COMMENTER_ASSOC="${{ github.event.comment.author_association }}"
             if [ "$COMMENTER_ASSOC" = "OWNER" ] || [ "$COMMENTER_ASSOC" = "MEMBER" ] || [ "$COMMENTER_ASSOC" = "COLLABORATOR" ]; then
               SHOULD_RUN="true"
@@ -40,7 +40,7 @@ runs:
               echo "::notice::Skipping review - Commenter is not a team member (association: $COMMENTER_ASSOC)"
             fi
           else
-            echo "::notice::Skipping review - Comment does not contain @continue-review trigger or is not on a PR"
+            echo "::notice::Skipping review - Comment does not contain @continue-general-review trigger, or is not on a PR"
           fi
         else
           echo "::notice::Skipping review - Unsupported event type: ${{ github.event_name }}"
